kubernetes/components/wedding-manuele-robine/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pwa
spec:
  tls:
    - hosts:
        - manuele-robine.wedding
        - www.manuele-robine.wedding
        - wedding-manuele-robine.d3strukt0r.dev
      secretName: pwa-tls
  rules:
    - host: manuele-robine.wedding
      http: &pwa
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pwa
                port:
                  name: http
    - host: www.manuele-robine.wedding
      http: *pwa
    - host: wedding-manuele-robine.d3strukt0r.dev
      http: *pwa
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  tls:
    - hosts:
        - api-wedding-manuele-robine.d3strukt0r.dev
      secretName: api-tls
  rules:
    - host: api-wedding-manuele-robine.d3strukt0r.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
